test/type/fail/non_existent_global_method.j
class A{
  Void main() {
    return new B().a(null);
  }
}

class B{
  Void a(Int a) {return;}
}
